--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,35 @@
 
 * {
-
     padding: 0;
     margin: 0;
     font-size: 10px;
+    --card-size: 10vw;
+}
+
+.root {
     font-family: 'Roboto';
 }
 
-section,header, footer {
+section,header,footer, .inspirational {
     padding: 0 16rem 0 16rem;
 }
 
-p {
+body {
+    width: 100vw;
+}
+
+.hero-left-side p {
+    color:#E5E7EB;
     margin: 1rem 0 1rem 0;
     font-size: 2.4rem;
+}
+
+h2 {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    font-size: 3.6rem;
+    font-weight: extra-bold;
+    text-align: center;
 }
 
 a:any-link {
@@ -34,6 +50,7 @@ header {
 
 .header-links {
     display: flex;
+    color: #E5E7EB;
     gap: 2rem;
 }
 
@@ -42,28 +59,31 @@ header {
     padding-bottom: 6rem;
     background-color: #1F2937;
     display: flex;
-    justify-content: center;
     gap: 2rem;
-    align-items: stretch;
 }
 
 .hero-left-side {
+    flex: 1;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
+    gap: 3rem;
+    justify-content: center;
+    text-align: left;
+    align-items: flex-start;
     color: #F9FAF8;
     font-size: 48px;
     font-weight: bolder;
 }
 
 .hero-right-side {
-    display: flex;
+    align-self: flex-start;
     width: 50%;
-    flex-shrink: none;
+    min-width: 20vw;
     height: auto;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
+    flex: 1;
     color: #F9FAF8;
+    border: 0.4rem solid #F9FAF8;
     border-radius: 2rem;
     background-color: #e5e7eb87;
 }
@@ -77,4 +97,65 @@ a.signup {
     text-align: center;
     font-size: 24px;
     font-weight: 900;
+}
+
+/*--- Card Container ---*/
+.card-container {
+    margin: 4rem 0 4rem 0;
+    display: flex;
+    width: 100%;
+    min-height: var(--card-size);
+    justify-content: center;
+    gap: 4rem;
+}
+
+.card {
+    /*-- Flex Properties --*/
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.card-picture {
+    /*-- Card Propterties --*/
+    min-width: var(--card-size);
+    max-width: var(--card-size);
+    min-height: var(--card-size);
+    max-height: var(--card-size);
+    align-self: stretch;
+    border: 0.5rem solid #3882F6;
+    border-radius: 2rem;
+    background-color: #3881f611;
+    box-shadow: 
+            0.3rem 0.3rem 3rem 3rem #1f293729,
+            0.3rem 0.3rem 0.5rem #1f29375f;
+}
+
+.card p {
+    max-width: var(--card-size);
+    text-align: center;
+    color: #1f2937e7;
+    font-size: 2rem;
+    padding: 0.4rem;
+}
+
+.inspirational {
+    padding-bottom: 4rem;
+    padding-top: 4rem;
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+}
+
+section.inspirational p {
+
+    color: #1F2937;
+    font-style: italic;
+    font-size: 36px;
+}
+
+section.inspirational .author {
+    text-align: end;
+    font-weight: 700;
+    font-size: 24px;
 }
