--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,6 @@ body {
     width: 100vw;
 }
 
-.hero-left-side p {
-    color:#E5E7EB;
-    margin: 1rem 0 1rem 0;
-    font-size: 2.4rem;
-}
-
 h2 {
     margin-top: 4rem;
     margin-bottom: 4rem;
@@ -54,6 +48,7 @@ header {
     gap: 2rem;
 }
 
+/*--- Hero Section ---*/
 .hero {
     padding-top: 6rem;
     padding-bottom: 6rem;
@@ -74,6 +69,12 @@ header {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: bolder;
+}
+
+.hero-left-side p {
+    color:#E5E7EB;
+    margin: 1rem 0 1rem 0;
+    font-size: 2.4rem;
 }
 
 .hero-right-side {
@@ -139,6 +140,7 @@ a.signup {
     padding: 0.4rem;
 }
 
+/*--- Inspiration Quote --- */
 .inspirational {
     padding-bottom: 4rem;
     padding-top: 4rem;
@@ -147,15 +149,49 @@ a.signup {
     flex-direction: column;
 }
 
-section.inspirational p {
+.inspirational p {
 
     color: #1F2937;
     font-style: italic;
     font-size: 36px;
 }
 
-section.inspirational .author {
+.inspirational .author {
     text-align: end;
     font-weight: 700;
     font-size: 24px;
+}
+
+/*--- Call to Action! ---*/
+.action-container {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: #3882F6;
+    border-radius: 1rem;
+    width: 100%;
+    padding: 3rem 4rem 3rem 4rem;
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.action-container h2 {
+    color: #E5E7EB;
+    margin: 0;
+}
+
+.action-container p {
+    color: #E5E7EB;
+}
+
+.action-container a {
+    margin-top: 1rem;
+    background-color: #3882F6;
+    width: max-content;
+    border-radius: 1rem;
+    border: 0.2rem solid #E5E7EB;
+    padding: 0.75rem 3rem 0.75rem 3rem;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 900;
 }
