--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,17 @@ header {
     justify-content: space-between;
 }
 
+footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+}
+
+footer p {
+    padding: 1.2rem;
+    font-size: 2rem;
+    text-align: center;
+}
+
 .header-links {
     display: flex;
     color: #E5E7EB;
@@ -124,6 +135,7 @@ a.signup {
     min-height: var(--card-size);
     max-height: var(--card-size);
     align-self: stretch;
+    object-fit: cover;
     border: 0.5rem solid #3882F6;
     border-radius: 2rem;
     background-color: #3881f611;
@@ -168,20 +180,25 @@ a.signup {
     margin-bottom: 2rem;
     background-color: #3882F6;
     border-radius: 1rem;
-    width: 100%;
     padding: 3rem 4rem 3rem 4rem;
     display: flex;
     gap: 2rem;
     justify-content: center;
+    align-items: center;
 }
 
 .action-container h2 {
     color: #E5E7EB;
     margin: 0;
+    text-align: start;
+    font-size: 2.6rem;
+    font-weight: 700;
 }
 
 .action-container p {
     color: #E5E7EB;
+    font-size: 2.0rem;
+    text-align: start;
 }
 
 .action-container a {
@@ -192,6 +209,8 @@ a.signup {
     border: 0.2rem solid #E5E7EB;
     padding: 0.75rem 3rem 0.75rem 3rem;
     text-align: center;
+    align-self: center;
+    color: #E5E7EB;
     font-size: 24px;
     font-weight: 900;
 }
